--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,14 @@ jobs:
         env:
           DEVELOPER_DIR: /Applications/Xcode_11.4.app/Contents/Developer
 
-  # linux:
-  #   runs-on: ubuntu-latest
-  #   container:
-  #     image: swift:5.2
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v1
-  #     - name: Build and Test
-  #       run: swift test --enable-test-discovery
+  linux:
+    runs-on: ubuntu-latest
+
+    container:
+      image: swift:5.2
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Build and Test
+        run: swift test --enable-test-discovery
