--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,15 @@ jobs:
         env:
           DEVELOPER_DIR: /Applications/Xcode_11.4.app/Contents/Developer
 
-  # linux:
-  #   runs-on: ubuntu-latest
-  #   container:
-  #     image: swift:5.2
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v1
-  #     - name: Build and Test
-  #       run: swift test --enable-test-discovery
+ linux:
+   runs-on: ubuntu-latest
+   steps:
+     - name: Checkout
+       uses: actions/checkout@v1
+     - name: Build local docker image
+       run: docker build . -f Dockerfile_5.2 -t linuxbuild52
+     - name: run the docker image to test
+       run: |
+             docker run --security-opt apparmor:unconfined --security-opt seccomp=unconfined \
+             linuxbuild52 \
+             swift test -v --enable-test-discovery
