--- a/Dockerfile_5.2
+++ b/Dockerfile_5.2
@@ -3,12 +3,12 @@ FROM swift:5.2
 # use:
 #     docker build . -f "Dockerfile_5.2"
 #     docker build . -f "Dockerfile_5.2" -t linuxbuild52 --no-cache
-#     docker run --rm -it linuxbuild52
+#     docker run --cap-add=SYS_PTRACE --security-opt seccomp=unconfined --security-opt apparmor=unconfined --rm -it linuxbuild52
 # to run the build and test...
 WORKDIR /lib
 COPY Package.swift ./
 COPY Sources ./Sources
 COPY Tests ./Tests
-RUN swift build -v # --disable-index-store # --build-tests
- RUN swift test -v --enable-test-discovery # --disable-index-store
+RUN swift build -v --disable-index-store # --build-tests
+#RUN swift test -v --enable-test-discovery # --disable-index-store
 CMD ["bash"]
