Run container with --privileged and --cap-add sys_ptrace

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
 
     container:
       image: swift:5.2
+      options: --privileged --cap-add sys_ptrace
 
     steps:
       - name: Checkout
