--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   macos:
-    runs-on: macOS-latest
+    runs-on: macos-latest
 
     steps:
       - name: Checkout
@@ -18,15 +18,14 @@ jobs:
         env:
           DEVELOPER_DIR: /Applications/Xcode_11.4.app/Contents/Developer
 
- linux:
-   runs-on: ubuntu-latest
-   steps:
-     - name: Checkout
-       uses: actions/checkout@v1
-     - name: Build local docker image
-       run: docker build . -f Dockerfile_5.2 -t linuxbuild52
-     - name: run the docker image to test
-       run: |
-             docker run --security-opt apparmor:unconfined --security-opt seccomp=unconfined \
-             linuxbuild52 \
-             swift test -v --enable-test-discovery
+  linux:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Build local docker image
+        run: docker build . -f Dockerfile_5.2 -t linuxbuild52
+      - name: run the docker image to test
+        run: |
+         docker run --security-opt apparmor:unconfined --security-opt seccomp=unconfined \
+         linuxbuild52 swift test -v --enable-test-discovery
