--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,26 +7,73 @@ on:
     branches: [master]
 
 jobs:
-  macos:
-    runs-on: macOS-latest
+  macos_big_sur:
+    runs-on: macos-11.0
+
+    strategy:
+      matrix:
+        xcode:
+          - "12.2" # Swift 5.3
+
+    name: "macOS Big Sur (Xcode ${{ matrix.xcode }})"
 
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+      - uses: actions/cache@v2
+        with:
+          path: .build
+          key: ${{ runner.os }}-spm-xcode-${{ matrix.xcode }}-${{ hashFiles('**/Package.resolved') }}
+          restore-keys: |
+            ${{ runner.os }}-spm-xcode-${{ matrix.xcode }}-
       - name: Build and Test
-        run: swift test
+        run: |
+          swift test
         env:
-          DEVELOPER_DIR: /Applications/Xcode_11.4.app/Contents/Developer
+          DEVELOPER_DIR: /Applications/Xcode_${{ matrix.xcode }}.app/Contents/Developer
+
+  macos_catalina:
+    runs-on: macos-10.15
+
+    strategy:
+      matrix:
+        xcode:
+          - "12" # Swift 5.3
+
+    name: "macOS Catalina (Xcode ${{ matrix.xcode }})"
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - uses: actions/cache@v2
+        with:
+          path: .build
+          key: ${{ runner.os }}-spm-xcode-${{ matrix.xcode }}-${{ hashFiles('**/Package.resolved') }}
+          restore-keys: |
+            ${{ runner.os }}-spm-xcode-${{ matrix.xcode }}-
+      - name: Build and Test
+        run: |
+          swift test
+        env:
+          DEVELOPER_DIR: /Applications/Xcode_${{ matrix.xcode }}.app/Contents/Developer
 
   linux:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        swift:
+          - "5.3"
+
+    name: "Linux (Swift ${{ matrix.swift }})"
+
     container:
-      image: swift:5.2
+      image: swift:${{ matrix.swift }}
       options: --cap-add=SYS_PTRACE --security-opt seccomp=unconfined --security-opt apparmor=unconfined
 
     steps:
       - name: Checkout
         uses: actions/checkout@v1
       - name: Build and Test
-        run: swift test --enable-test-discovery
+        run: |
+          swift test --enable-test-discovery
